[package]
name = "file_watcher_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
futures = "0.3.27"
notify = "5.1.0"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
