[package]
name = "file_watcher_tokio"
version = "0.2.0"
edition = "2021"
description = "File watcher using tokio"
license = "MIT"
repository = "https://github.com/Banyc/file_watcher_tokio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
notify = "6.0.0"
tokio = { version = "1.28.2", features = ["sync"] }
tracing = "0.1.37"
