[package]
name = "file_watcher_tokio"
version = "0.4.0"
edition = "2021"
description = "File watcher using tokio"
license = "MIT"
repository = "https://github.com/Banyc/file_watcher_tokio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
notify = "7"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
